--- a/TcPluginCore/WrapperBuilder/WrapperBuilder.csproj
+++ b/TcPluginCore/WrapperBuilder/WrapperBuilder.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\TcPluginInterface\TcPluginInterface.csproj" />
     <ProjectReference Include="..\TcPluginTools\TcPluginTools.csproj" />
