--- a/src/TotalCommander.Interface.Aot/TotalCommander.Interface.Aot.csproj
+++ b/src/TotalCommander.Interface.Aot/TotalCommander.Interface.Aot.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <PublishAot>true</PublishAot>
-    <IsAotCompatible>true</IsAotCompatible>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TotalCommander.Interface.Abstraction\TotalCommander.Interface.Abstraction.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
   </ItemGroup>
 
 </Project>
