--- a/src/TotalCommander.Interface.Aot/TotalCommander.Interface.Aot.csproj
+++ b/src/TotalCommander.Interface.Aot/TotalCommander.Interface.Aot.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Plugins\FileSystem\Extensions\FileHub\Methods\" />
+  </ItemGroup>
+
 </Project>
